add google analytics, start of rental stats, better member stats, sortable fields in delta, google analytics tag, rental_edit accordion, beggining of advanced tools return,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -112,7 +112,7 @@ template(name='user_status')
 
 template(name='user_card')
     with user
-        .ui.horizontal.card
+        .ui.card
             if is_staff
                 .image
                     if kiosk_photo
