--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,6 +1,6 @@
 template(name='nav')
     unless is_frontdesk
-        #topnav.topnav.ui.top.fixed.borderless.menu
+        #topnav.topnav.ui.attached.borderless.menu
             if is_loading
                 .icon.item
                     //- i.big.spinning.yin.yang.grey.cancel.icon
