--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,6 @@ body {
     /* font-family: 'Roboto', sans-serif !important; */
     /* font-family: 'Ubuntu+Mono', sans-serif !important; */
     font-family: 'Ubuntu', sans-serif !important;
-    margin-top: 5em !important;
     /* font-size: 110% !important; */
     /*line-height: 200% !important;*/
     /* background: rgba(0,0,0,.9) !important; */
@@ -34,7 +33,7 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-
+}
 
 .lowercase {
     text-transform: lowercase !important;
@@ -185,6 +184,7 @@ body {
 }
 .global_container{
     transition: transform 1s; /* Animation */
+    /* padding-top: 5em !important; */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .zoom:hover {
