--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -134,7 +134,7 @@ template(name='field_edit')
         //- +text_edit key='ref_model' label='Reference Model' direct=true
         div
         +boolean_edit key='faceted' label='faceted' icon='diamond' direct=true
-        +boolean_edit key='sortable' label='sortable' icon='down-chevron' direct=true
+        +boolean_edit key='sortable' label='sortable' icon='chevron-down' direct=true
         if is_ref  
             +single_doc_edit key='ref_model' ref_model='model' label='reference model' direct=true
         else if is_user_ref  
