--- a/components/service.jade
+++ b/components/service.jade
@@ -81,8 +81,9 @@ template(name='service_edit')
                         +ismall name='add'
                         |add service
                     a.ui.big.fluid.button(href="/service/#{_id}/view" title='save')
-                        i.checkmark.green.icon
-                        |save
+                        .ui.small.header
+                            i.checkmark.green.large.icon
+                            | save
                     +remove_button
                     +image_edit key='image' label='image' direct=true
                 .eight.wide.column 
@@ -97,7 +98,7 @@ template(name='service_edit')
                     if set_duration
                         +number_edit key='duration_hours' label='duration hours' direct=true
             
-                    +text_edit key='_author_username' label='author username' direct=true
+                    +single_user_edit key='_author_username' label='author username' direct=true
                     +number_edit key='hourly_rate' label='hourly rate' direct=true
                     +boolean_edit key='variable_price' label='variable price' direct=true
                     +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
